[package]
name = "sapfire_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
winit = "0.28.3"
shaderc = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
metal = "0.24.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }